--- a/main.css
+++ b/main.css
@@ -1,14 +1,24 @@
-header {
-	height: 100%;
-}
-
 html {
 	height: 100%;
 	position: relative;
 }
 
+header {
+	height: 100%;
+}
+
 * {
     font-family: arial;
+}
+
+@font-face {
+    font-family: 'Berlin Sans FB';
+    src: url('BerlinSansFB-Reg.woff2') format('woff2'),
+        url('BerlinSansFB-Reg.woff') format('woff'),
+        url('BerlinSansFB-Reg.ttf') format('truetype'),
+        url('BerlinSansFB-Reg.svg#BerlinSansFB-Reg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .banner-top {
@@ -16,9 +26,8 @@ html {
 	display: flex;
 	justify-content: center; /* align horizontal */
 	align-items: center; /* align vertical */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/companylogoBG.jpg");
+    background-image: url("../img/companylogoBG.jpg");
 
-    /* Set a specific height */
     height: 20%;
     width: 400px;
 
@@ -29,11 +38,14 @@ html {
     position: relative;
 }
 
-.banner-top h1 {	
+.banner-top h1 {
+	font-family: 'Berlin Sans FB';
+    font-weight: 450;
+    font-style: normal;
+    text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -2px black;
 	text-align: center;
     position: relative;
     color: #ffffff;
-    white-space: nowrap;
 }
 /* Place text in the middle of the image */
 main {
@@ -61,8 +73,11 @@ main {
 	color: #ffffff;
 	font-weight: lighter;
 	text-transform: uppercase;
-	font-size: 9pt;
+	font-size: 0.75em;
 	text-align: center;
+	padding-left: 5px;
+	padding-right: 5px;
+	top: 2px;
 }
 .no-underline {
 	text-decoration: none;
@@ -115,17 +130,136 @@ footer {
 	background-color: #000000;
 	color: #ffffff;
 	font-weight: lighter;
-	font-size: 9pt;
+	font-size: 0.75em;
 	text-align: center;
 	height: 22px;
     margin: auto;
 	width: 400px;
 	border-top: ridge #707070;
 	border-width: 1px;
+	line-height: 24px;
 }
 
 footer p {
 	margin-top: 0px;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+/* Button styling */
+.menu-toggle {
+  display: inline-block;
+  padding: .75em 15px;
+  line-height: 1em;
+  font-size: 1em;
+  color: #333;
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  color: #c00;
+}
+
+/*
+ Default styles + Mobile first
+ Offscreen menu style
+*/
+.main-menu {
+  position: absolute;
+  left: -200px;
+  top: 0;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: visible;
+  transition: left 0.3s ease,
+              box-shadow 0.3s ease;
+  z-index: 999;
+}
+
+.main-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 2.5em 0 0;
+  /* Hide shadow w/ -8px while 'closed' */
+  -webkit-box-shadow: -8px 0 8px rgba(0,0,0,.5);
+     -moz-box-shadow: -8px 0 8px rgba(0,0,0,.5);
+          box-shadow: -8px 0 8px rgba(0,0,0,.5);
+  min-height: 100%;
+  width: 200px;
+  background: #1a1a1a;
+}
+
+.main-menu a {
+  display: block;
+  padding: .75em 15px;
+  line-height: 1em;
+  font-size: 1em;
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #383838;
+}
+
+.main-menu li:first-child a {
+  border-top: 1px solid #383838;
+}
+
+.main-menu a:hover,
+.main-menu a:focus {
+  background: #333;
+  text-decoration: underline;
+}
+
+.main-menu .menu-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+
+/*
+ More to come here...
+*/
+
+
+/*
+ Demo purposes only
+*/
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+header {
+  padding: 20px;
+  display: flex;
+  align-items: baseline;
+}
+
+article {
+  padding: 30px;
+  width: 55em;
+  font-size: 16px;
+  line-height: 1.5em;
+}
+
+article h2 {
+  font-weight: 500;
+  font-size: 28px;
+}
+
+.logo {
+  margin: 0 30px 0 10px;
+  font-size: 1.5em;
 }
 
 @media screen and (max-width: 960px) {
@@ -147,12 +281,18 @@ footer p {
 		border-color: #ffffff;
 		border-width: 2px;
 	}
+
 	.section-header {
 		height: 95px;
 	}
+
 	.navigation-bar {
 		height: 15px;
 	}
+	.navigation-bar a {
+		top: -2px;
+	}
+
 	footer {
 		border-top: none;
 	}
@@ -170,6 +310,9 @@ footer p {
 		border-color: #ffffff;
 		border-width: 4px;
 	}
+	.navigation-bar a {
+		display: none;
+	}
 
 	figure {
 		border: solid;
@@ -182,5 +325,6 @@ footer p {
 	}
 	footer p {
 		font-size: 1.5em;
+		line-height: 42px;
 	}
 }
