--- a/main.css
+++ b/main.css
@@ -1,14 +1,24 @@
-header {
-	height: 100%;
-}
-
 html {
 	height: 100%;
 	position: relative;
 }
 
+header {
+	height: 100%;
+}
+
 * {
     font-family: arial;
+}
+
+@font-face {
+    font-family: 'Berlin Sans FB';
+    src: url('BerlinSansFB-Reg.woff2') format('woff2'),
+        url('BerlinSansFB-Reg.woff') format('woff'),
+        url('BerlinSansFB-Reg.ttf') format('truetype'),
+        url('BerlinSansFB-Reg.svg#BerlinSansFB-Reg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .banner-top {
@@ -16,9 +26,8 @@ html {
 	display: flex;
 	justify-content: center; /* align horizontal */
 	align-items: center; /* align vertical */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/companylogoBG.jpg");
+    background-image: url("../img/companylogoBG.jpg");
 
-    /* Set a specific height */
     height: 20%;
     width: 400px;
 
@@ -29,11 +38,14 @@ html {
     position: relative;
 }
 
-.banner-top h1 {	
+.banner-top h1 {
+	font-family: 'Berlin Sans FB';
+    font-weight: 450;
+    font-style: normal;
+    text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -2px black;
 	text-align: center;
     position: relative;
     color: #ffffff;
-    white-space: nowrap;
 }
 /* Place text in the middle of the image */
 main {
@@ -61,8 +73,11 @@ main {
 	color: #ffffff;
 	font-weight: lighter;
 	text-transform: uppercase;
-	font-size: 9pt;
+	font-size: 0.75em;
 	text-align: center;
+	padding-left: 5px;
+	padding-right: 5px;
+	top: 2px;
 }
 .no-underline {
 	text-decoration: none;
@@ -115,13 +130,14 @@ footer {
 	background-color: #000000;
 	color: #ffffff;
 	font-weight: lighter;
-	font-size: 9pt;
+	font-size: 0.75em;
 	text-align: center;
 	height: 22px;
     margin: auto;
 	width: 400px;
 	border-top: ridge #707070;
 	border-width: 1px;
+	line-height: 24px;
 }
 
 footer p {
@@ -147,12 +163,18 @@ footer p {
 		border-color: #ffffff;
 		border-width: 2px;
 	}
+
 	.section-header {
 		height: 95px;
 	}
+
 	.navigation-bar {
 		height: 15px;
 	}
+	.navigation-bar a {
+		top: -2px;
+	}
+
 	footer {
 		border-top: none;
 	}
@@ -170,6 +192,9 @@ footer p {
 		border-color: #ffffff;
 		border-width: 4px;
 	}
+	.navigation-bar a {
+		display: none;
+	}
 
 	figure {
 		border: solid;
@@ -182,5 +207,6 @@ footer p {
 	}
 	footer p {
 		font-size: 1.5em;
+		line-height: 42px;
 	}
 }
