--- a/product.css
+++ b/product.css
@@ -79,16 +79,20 @@ main {
 	margin: auto;
 }
 
+nav {
+	width: 400px;
+}
 .navigation-bar {
 	height: 22px;
     margin: auto;
-	width: 400px;
+	width: 398px;
 	background-color: #707070;
 	color: #ffffff;
 	text-align: center;
 	border-style: solid;
-	border-color: #cfcfcf;
+	border-color: #e4e4e4;
 	border-width: 1px;
+	border-bottom: none;
 }
 .navigation-bar a {
 	position: relative;
@@ -121,15 +125,18 @@ figure {
 }
 
 section {
-	max-width: 400px;
+	width: 400px;
     margin : auto;
 }
 
 .section-header {
 	align-items: center; /* align vertical */
 	height: 45px;
-	width: 100%;
+	width: 400px;
 	background-color: #2699fb;
+	border-top: solid #fff 1px;
+	border: solid #f5f5f5 1px;
+	border-bottom: solid #fff 6px;
 
 }
 
@@ -149,14 +156,15 @@ section h2 {
 .row {
   display: flex;
   background-color: #FFF;
-  border-left: solid #fff 2px;
-  border-right: solid #fff 2px;
+  border-left: solid #fff 1px;
+  border-right: solid #fff 1px;
+  box-shadow: 0px 1px 1px 0px #444444;
 }
 
 
 .column {
   flex: 33.33%;
-  padding-top: 6px;
+  padding-bottom: 6px;
   padding-left: 3px;
   padding-right: 3px;
 }
@@ -170,9 +178,7 @@ footer {
 	height: 22px;
     margin: auto;
 	width: 400px;
-	border-top: ridge #707070;
-	border-width: 1px;
-	border-top: solid #fff 6px;
+	z-index: 6;
 }
 
 footer p {
@@ -180,3 +186,24 @@ footer p {
 	margin: 0px;
 }
 
+@media screen and (max-width: 960px) {
+	.collapsed {
+		display: none;
+	}
+}
+
+@media  (min-width: 361px) and (max-width: 960px) {
+
+	#backgroundVideo {
+		display: none;
+	}
+
+}
+
+@media screen and (max-width: 360px) {
+	
+	#backgroundVideo {
+		display: none;
+	}
+
+}
