--- a/product.css
+++ b/product.css
@@ -46,14 +46,13 @@ video {
 .banner-top {
 	margin: auto;
 	display: flex;
-	justify-content: center; /* align horizontal */
-	align-items: center; /* align vertical */
+	justify-content: center;
+	align-items: center;
 	background-image: url("../img/companylogoBG.jpg");
 
 	height: 20%;
 	width: 400px;
 
-	/* Position and center the image to scale nicely on all screens */
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -64,12 +63,12 @@ video {
 	font-family: 'Berlin Sans FB';
 	font-weight: 450;
 	font-style: normal;
-	text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -2px black;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,	-1px 1px 0 #000, 1px 1px 0 #000;
 	text-align: center;
 	position: relative;
 	color: #ffffff;
 }
-/* Place text in the middle of the image */
+
 main {
 	display: flex;
 	flex-wrap: wrap;
@@ -79,6 +78,9 @@ main {
 	margin: auto;
 }
 
+nav {
+	width: 400px;
+}
 .navigation-bar {
 	height: 22px;
 	margin: auto;
@@ -87,8 +89,9 @@ main {
 	color: #ffffff;
 	text-align: center;
 	border-style: solid;
-	border-color: #cfcfcf;
+	border-color: #e4e4e4;
 	border-width: 1px;
+	border-bottom: none;
 }
 .navigation-bar a {
 	position: relative;
@@ -105,18 +108,29 @@ main {
 	text-decoration: none;
 }
 
-section {
-	width: 400px;
-	margin : auto;
-	z-index: 0;
+img {
+	vertical-align: middle;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	overflow: hidden;
+	box-shadow: 0px 0px 1px 0px #444444;
+}
+
+figure {
+	max-width: 400px;
+	height: 82px;
+	margin: 0px;
 }
 
 .section-header {
 	align-items: center; /* align vertical */
-	height: 90px;
-	width: 100%;
+	height: 45px;
+	width: 400px;
 	background-color: #2699fb;
-
+	border-top: solid #fff 1px;
+	border: solid #f5f5f5 1px;
+	border-bottom: solid #fff 6px;
 }
 
 section h2 {
@@ -132,22 +146,23 @@ section h2 {
 	transform: translateY(-50%);
 }
 
-span {
-	display: block;
+.section-product {
+	width: 31.8%;
+	background-color: #FFF;
+	padding-bottom: 6px;
+	border-left: solid #fff 3px;
+	border-right: solid #fff 3px;
 }
 
-figure {
-	max-width: 400px;
-	height: 168px;
-	margin: 0px;
-}
-
-img {
-	vertical-align: middle;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	overflow: hidden;
+.section-container {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	width: 396px;
+	justify-content: center;
+	border-right: solid #fff 2px;
+	border-left: solid #fff 2px;
+	box-shadow: 0px 1px 1px 0px #444444;
 }
 
 footer {
@@ -159,91 +174,58 @@ footer {
 	height: 22px;
 	margin: auto;
 	width: 400px;
-	border-top: ridge #707070;
-	border-width: 1px;
-	line-height: 24px;
+	z-index: 6;
 }
 
 footer p {
-	margin-top: 0px;
+	line-height: 22px;
+	margin: 0px;
 }
 
 @media screen and (max-width: 960px) {
-	.collapsed {
-		display: none;
-	}
+	
 }
 
 @media  (min-width: 361px) and (max-width: 960px) {
-	.collapsed-medium {
-		display: none;
-	}
 
 	#backgroundVideo {
 		display: none;
-	}
-
-	.growing {
-		width: 50%;
-	}
-	.growing figure {
-		height: 160px;
-		border-style: solid;
-		border-color: #ffffff;
-		border-width: 2px;
-		float: left;
 	}
 
 	.section-header {
-		height: 95px;
-	}
-
-	.navigation-bar {
-		height: 15px;
-	}
-	.navigation-bar a {
-		top: -2px;
-	}
-
-	footer {
-		border-top: none;
-	}
-
-}
-
-@media screen and (max-width: 360px) {
-	.collapsed-small {
 		display: none;
 	}
 
+	.section-product {
+		width: 46.5%;
+		border: solid #fff 5px;
+		border-top: none;
+		padding-bottom: none;
+	}
+
+	.section-container {
+		box-shadow: none;
+		padding-top: 10px;
+	}
+
+	figure {
+		height: 106px;
+	}
+
+
+	
+}
+
+@media screen and (max-width: 360px) {
+	
 	#backgroundVideo {
 		display: none;
 	}
 
-	.navigation-bar {
-		height: 40px;
-		width: 392px;
-		border: solid;
-		border-color: #ffffff;
-		border-width: 4px;
-	}
-	
-	.navigation-bar a {
-		line-height: 40px;
-		font-size: 1em;
+	.section-product {
+		width: 100%;
+		border: solid #fff 3px;
+		border-top: none;
 	}
 
-	figure {
-		border: solid;
-		border-color: #ffffff;
-		border-width: 4px;
-		height: 155px;
-	}
-	footer {
-		height: 50px;
-	}
-	footer p {
-		font-size: 1.5em;
-		line-height: 42px;
-	}
 }
