--- a/product.css
+++ b/product.css
@@ -4,7 +4,6 @@ html {
 	font-family: arial;
 }
 
-
 @font-face {
 	font-family: 'Berlin Sans FB';
 	src: url('./BerlinSansFB-Reg.woff2') format('woff2'),
@@ -19,6 +18,7 @@ video {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+	display: block;
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
@@ -37,14 +37,13 @@ video {
 .banner-top {
 	margin: auto;
 	display: flex;
-	justify-content: center; /* align horizontal */
-	align-items: center; /* align vertical */
+	justify-content: center;
+	align-items: center;
 	background-image: url("../img/companylogoBG.jpg");
 
 	height: 20%;
 	width: 400px;
 
-	/* Position and center the image to scale nicely on all screens */
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -55,12 +54,12 @@ video {
 	font-family: 'Berlin Sans FB';
 	font-weight: 450;
 	font-style: normal;
-	text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -2px black;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,	-1px 1px 0 #000, 1px 1px 0 #000;
 	text-align: center;
 	position: relative;
 	color: #ffffff;
 }
-/* Place text in the middle of the image */
+
 main {
 	display: flex;
 	flex-wrap: wrap;
@@ -78,8 +77,9 @@ main {
 	color: #ffffff;
 	text-align: center;
 	border-style: solid;
-	border-color: #cfcfcf;
+	border-color: #e4e4e4;
 	border-width: 1px;
+	border-bottom: none;
 }
 .navigation-bar a {
 	position: relative;
@@ -96,17 +96,37 @@ main {
 	text-decoration: none;
 }
 
-section {
-	margin : auto;
-	z-index: 0;
+img {
+	vertical-align: middle;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	overflow: hidden;
+	box-shadow: 0px 0px 1px 0px #444444;
+}
+
+figure {
+	max-width: 400px;
+	height: 82px;
+	margin: 0px;
 }
 
 .section-header {
 	align-items: center; /* align vertical */
-	height: 90px;
-	width: 100%;
+	height: 45px;
+	width: 400px;
 	background-color: #2699fb;
+	border-top: solid #fff 1px;
+	border: solid #f5f5f5 1px;
+	border-bottom: solid #fff 6px;
+}
 
+.mobile-section-header {
+	align-items: center; /* align vertical */
+	height: 45px;
+	width: 400px;
+	background-color: #2699fb;
+	margin-bottom: 15px;
 }
 
 section h2 {
@@ -122,22 +142,27 @@ section h2 {
 	transform: translateY(-50%);
 }
 
-span {
-	display: block;
+.mobile-section-header {
+		display: none;
 }
 
-figure {
-	max-width: 400px;
-	height: 168px;
-	margin: 0px;
+.section-product {
+	width: 31.8%;
+	background-color: #FFF;
+	padding-bottom: 6px;
+	border-left: solid #fff 3px;
+	border-right: solid #fff 3px;
 }
 
-img {
-	vertical-align: middle;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	overflow: hidden;
+.section-container {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	width: 396px;
+	justify-content: center;
+	border-right: solid #fff 2px;
+	border-left: solid #fff 2px;
+	box-shadow: 0px 1px 1px 0px #444444;
 }
 
 footer {
@@ -149,65 +174,79 @@ footer {
 	height: 22px;
 	margin: auto;
 	width: 400px;
-	border-top: ridge #707070;
-	border-width: 1px;
-	line-height: 24px;
+	z-index: 6;
 }
 
 footer p {
-	margin-top: 0px;
+	line-height: 22px;
+	margin: 0px;
 }
 
-@media screen and (max-width: 960px) {
-	.collapsed {
-		display: none;
-	}
-}
 
 @media  (min-width: 361px) and (max-width: 960px) {
-	.collapsed-medium {
-		display: none;
-	}
 
 	#backgroundVideo {
 		display: none;
-	}
-
-	.growing {
-		width: 50%;
-	}
-	.growing figure {
-		height: 160px;
-		border-style: solid;
-		border-color: #ffffff;
-		border-width: 2px;
-		float: left;
 	}
 
 	.section-header {
-		height: 95px;
+		display: none;
 	}
 
-	.navigation-bar {
-		height: 15px;
-	}
-	.navigation-bar a {
-		top: -2px;
-	}
-
-	footer {
+	.section-product {
+		width: 46.5%;
+		border: solid #fff 5px;
 		border-top: none;
+		padding-bottom: none;
 	}
 
+	.section-container {
+		box-shadow: none;
+		padding-top: 10px;
+	}
+
+	figure {
+		height: 106px;
+	}
+
+
+	
 }
 
 @media screen and (max-width: 360px) {
-	.collapsed-small {
+	
+	#backgroundVideo {
 		display: none;
 	}
 
-	#backgroundVideo {
+	.banner-top h1 {
+		text-shadow: none;
+	}
+
+	.section-product {
+		width: 100%;
+		border: solid #fff 12px;
+		border-top: none;
+		padding-top: 2px;
+	}
+
+	.section-header {
 		display: none;
+	}
+
+	.mobile-section-header {
+		display: block;
+	}
+
+	section h2 {
+		top: 55%;
+		font-size: 1.6em;
+	}
+
+	figure {
+		max-width: 400px;
+		height: 210px;
+		margin: 0px;
 	}
 
 	.navigation-bar {
@@ -223,17 +262,20 @@ footer p {
 		font-size: 1em;
 	}
 
-	figure {
-		border: solid;
-		border-color: #ffffff;
-		border-width: 4px;
-		height: 155px;
+	.section-container {
+		box-shadow: none;
+		padding-left: 10px;
+		padding-right: 10px;
 	}
+
 	footer {
 		height: 50px;
 	}
-	footer aside {
+	footer p {
 		font-size: 1.5em;
-		line-height: 42px;
+		color: #f5f5f5;
+		line-height: 50px;
 	}
+
+
 }
