--- a/product.css
+++ b/product.css
@@ -7,8 +7,7 @@ body {
 	font-family: Arial, Sans, "Times New Roman";
 }
 
-
-@font-face { /* Generate the font to be used in the main header */
+@font-face {
 	font-family: 'Berlin Sans FB';
 	src: url('./BerlinSansFB-Reg.woff2') format('woff2'),
 	url('./BerlinSansFB-Reg.woff') format('woff'),
@@ -22,12 +21,13 @@ video {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+	display: block;
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
 }
 
-#backgroundVideo {
+#backgroundVideo { /*position the background video and make sure it falls behind the rest of the content */
 	position: fixed;
 	right: 0;
 	bottom: 0;
@@ -40,12 +40,13 @@ video {
 .banner-top {
 	margin: auto;
 	display: flex;
-	justify-content: center; /* align the items horizontally */
-	align-items: center; /* align the items vertically */
+	justify-content: center;
+	align-items: center;
 	background-image: url("../img/companylogoBG.jpg");
 
 	height: 20%;
 	width: 400px;
+
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -56,12 +57,12 @@ video {
 	font-family: 'Berlin Sans FB';
 	font-weight: 500;
 	font-style: normal;
-	text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -2px black;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,	-1px 1px 0 #000, 1px 1px 0 #000;
 	text-align: center;
 	position: relative;
 	color: #ffffff;
 }
-/* Place text in the middle of the image */
+
 main {
 	display: flex;
 	flex-wrap: wrap;
@@ -79,8 +80,9 @@ main {
 	color: #ffffff;
 	text-align: center;
 	border-style: solid;
-	border-color: #cfcfcf;
+	border-color: #e4e4e4;
 	border-width: 1px;
+	border-bottom: none;
 }
 .navigation-bar a {
 	position: relative;
@@ -94,21 +96,40 @@ main {
 	top: 2px;
 }
 .no-underline {
-	text-decoration: none;
+	text-decoration: none; /* removing the underline that is standard on all linking text */
 }
 
-section {
-	margin : auto;
-	z-index: 0;
-	width: 400px;
+img {
+	vertical-align: middle;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	overflow: hidden;
+	box-shadow: 0px 0px 1px 0px #444444;
+}
+
+figure {
+	max-width: 400px;
+	height: 82px;
+	margin: 0px;
 }
 
 .section-header {
-	align-items: center; 
-	height: 90px;
-	width: 100%;
-	background-color: #2699fb; /* setting the background color for the section headers */
+	align-items: center;
+	height: 45px;
+	width: 400px;
+	background-color: #2699fb;
+	border-top: solid #fff 1px;
+	border: solid #f5f5f5 1px;
+	border-bottom: solid #fff 6px;
+}
 
+.mobile-section-header {
+	align-items: center;
+	height: 45px;
+	width: 400px;
+	background-color: #2699fb;
+	margin-bottom: 15px;
 }
 
 section h2 {
@@ -124,22 +145,27 @@ section h2 {
 	transform: translateY(-50%);
 }
 
-span {
-	display: block;
+.mobile-section-header {
+		display: none;
 }
 
-figure {
-	max-width: 400px;
-	height: 168px;
-	margin: 0px;
+.section-product {
+	width: 31.8%;
+	background-color: #FFF;
+	padding-bottom: 6px;
+	border-left: solid #fff 3px;
+	border-right: solid #fff 3px;
 }
 
-img {
-	vertical-align: middle;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	overflow: hidden;
+.section-container {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	width: 396px;
+	justify-content: center;
+	border-right: solid #fff 2px;
+	border-left: solid #fff 2px;
+	box-shadow: 0px 1px 1px 0px #444444;
 }
 
 footer {
@@ -151,63 +177,46 @@ footer {
 	height: 22px;
 	margin: auto;
 	width: 400px;
-	border-top: ridge #707070;
-	border-width: 1px;
-	line-height: 24px;
+	z-index: 6;
 }
 
 footer p {
-	margin-top: 0px;
+	line-height: 22px;
+	margin: 0px;
 }
 
-@media screen and (max-width: 960px) {
-	.collapsed {
-		display: none;
-	}
-}
 
 @media  (min-width: 361px) and (max-width: 960px) {
-	.collapsed-medium { /* removing the content that is not needed from display */
-		display: none;
-	}
 
 	#backgroundVideo {
 		display: none;
 	}
 
-	.growing {
-		width: 50%;
-	}
-	.growing figure {
-		height: 160px;
-		border-style: solid;
-		border-color: #ffffff;
-		border-width: 2px;
-		float: left;
-	}
-
 	.section-header {
-		height: 95px;
-	}
-
-	.navigation-bar {
-		height: 15px;
-	}
-	.navigation-bar a {
-		top: -2px;
-	}
-
-	footer {
-		border-top: none;
-	}
-
-}
-
-@media screen and (max-width: 360px) {
-	.collapsed-small {
 		display: none;
 	}
 
+	.section-product {
+		width: 46.5%;
+		border: solid #fff 5px;
+		border-top: none;
+	}
+
+	.section-container {
+		box-shadow: none;
+		padding-top: 10px;
+	}
+
+	figure {
+		height: 106px;
+	}
+
+
+	
+}
+
+@media screen and (max-width: 360px) {
+	
 	#backgroundVideo {
 		display: none;
 	}
@@ -215,7 +224,33 @@ footer p {
 	.banner-top h1 {
 		text-shadow: none;
 	}
-	
+
+	.section-product {
+		width: 100%;
+		border: solid #fff 12px;
+		border-top: none;
+		padding-top: 2px;
+	}
+
+	.section-header {
+		display: none;
+	}
+
+	.mobile-section-header { /* displaying the mobile section header element that was not needed on other screen sizes */
+		display: block;
+	}
+
+	section h2 {
+		top: 55%;
+		font-size: 1.6em;
+	}
+
+	figure {
+		max-width: 400px;
+		height: 210px;
+		margin: 0px;
+	}
+
 	.navigation-bar {
 		height: 40px;
 		width: 392px;
@@ -229,17 +264,20 @@ footer p {
 		font-size: 1em;
 	}
 
-	figure {
-		border: solid;
-		border-color: #ffffff;
-		border-width: 4px;
-		height: 155px;
+	.section-container {
+		box-shadow: none;
+		padding-left: 10px;
+		padding-right: 10px;
 	}
+
 	footer {
 		height: 50px;
 	}
-	footer aside {
+	footer p {
 		font-size: 1.5em;
-		line-height: 42px;
+		color: #f5f5f5;
+		line-height: 50px;
 	}
+
+
 }
